[gd_scene load_steps=6 format=3 uid="uid://drojhwcibs25"]

[ext_resource type="Script" path="res://battle.gd" id="1"]
[ext_resource type="FontFile" path="res://common/fonts/bigger.tres" id="3"]
[ext_resource type="Theme" uid="uid://bjeweqbaitpr4" path="res://common/gui/ui-theme.tres" id="4"]

[sub_resource type="Animation" id="3"]
resource_name = "default"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4, 5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ryaul"]
_data = {
"default": SubResource("3")
}

[node name="battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("4")
script = ExtResource("1")

[node name="roundCountdown" type="Label" parent="."]
layout_mode = 0
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("3")
text = "countdown"

[node name="lastWinner" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -12.0
offset_bottom = 12.0
theme_override_fonts/font = ExtResource("3")
text = "winner!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="lastWinner"]
libraries = {
"": SubResource("AnimationLibrary_ryaul")
}

[node name="roundTimer" type="Timer" parent="."]
wait_time = 180.0
one_shot = true

[node name="cooldownTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="roundTimer" to="." method="_on_roundTimer_timeout"]
[connection signal="timeout" from="cooldownTimer" to="." method="_on_cooldownTimer_timeout"]
